Add update_cache: True when installing docker-engine

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -20,7 +20,7 @@
     state: 'present'
     update_cache: True
 
-- name: Install Docker dependencies and Docker
+- name: Install Docker dependencies
   apt:
     name: '{{ item }}'
     state: 'present'
@@ -28,7 +28,12 @@
     - 'apt-transport-https'
     - 'ca-certificates'
     - 'aufs-tools'
-    - 'docker-engine={{ docker_version }}-0~{{ docker_distribution_release }}'
+
+- name: Install Docker
+  apt:
+    name: 'docker-engine={{ docker_version }}-0~{{ docker_distribution_release }}'
+    state: 'present'
+    update_cache: True
 
 - name: Remove Upstart config file
   file:
