--- a/.travis.yml
+++ b/.travis.yml
@@ -18,11 +18,72 @@ script:
     && (echo 'Idempotence test: pass' && exit 0)
     || (echo 'Idempotence test: fail' && exit 1)
   - >
+
+  - >
+
+
+
+
+
+---
+
+sudo: required
+
+env:
+  - distro: 'ubuntu1604'
+    init: '/lib/systemd/systemd'
+    run_opts: '--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro'
+  - distro: 'debian8'
+    init: '/lib/systemd/systemd'
+    run_opts: '--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro'
+
+services:
+  - docker
+
+before_install:
+  - 'docker pull geerlingguy/docker-${distro}-ansible:latest'
+
+script:
+  - container_id=$(mktemp)
+  - >
+    docker run
+    --detach
+    --volume="${PWD}":/etc/ansible/roles/this_role:ro ${run_opts}
+    geerlingguy/docker-${distro}-ansible:latest "${init}" > "${container_id}"
+
+  - >
+    docker exec --tty "$(cat ${container_id})" env TERM=xterm
+    ansible-playbook /etc/ansible/roles/this_role/tests/main.yml
+    --syntax-check
+  - >
+    docker exec --tty "$(cat ${container_id})" env TERM=xterm
+    ansible-playbook /etc/ansible/roles/this_role/tests/main.yml
+
+  - idempotence=$(mktemp)
+  - >
+    docker exec "$(cat ${container_id})"
+    ansible-playbook /etc/ansible/roles/this_role/tests/main.yml
+    | tee -a ${idempotence}
+  - >
+    tail ${idempotence}
+    | grep -q 'changed=0.*failed=0'
+    && (echo 'Idempotence test: pass' && exit 0)
+    || (echo 'Idempotence test: fail' && exit 1)
+
+  - >
+    docker exec --tty "$(cat ${container_id})" env TERM=xterm
     docker --version
     | grep -q 'version'
     && (echo 'Docker version test: pass' && exit 0)
     || (echo 'Docker version test: fail' && exit 1)
   - >
+    docker exec --tty "$(cat ${container_id})" env TERM=xterm
+    docker info
+    | grep -q 'Containers'
+    && (echo 'Docker permission test: pass' && exit 0)
+    || (echo 'Docker permission test: fail' && exit 1)
+  - >
+    docker exec --tty "$(cat ${container_id})" env TERM=xterm
     docker-compose --version
     | grep -q 'version'
     && (echo 'Docker Compose test: pass' && exit 0)
