--- a/.travis.yml
+++ b/.travis.yml
@@ -1,62 +1,38 @@
 ---
 
-sudo: required
+language: 'python'
+python: '2.7'
 
 env:
   - distro: 'ubuntu1604'
     init: '/lib/systemd/systemd'
-    run_opts: '--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro'
   - distro: 'debian8'
     init: '/lib/systemd/systemd'
-    run_opts: '--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro'
+  - SITE_AND_INVENTORY='tests/main.yml -i tests/inventory'
 
-services:
-  - docker
-
-before_install:
-  - 'docker pull geerlingguy/docker-${distro}-ansible:latest'
+install:
+  - 'pip install ansible==2.1'
+  - "{ echo '[defaults]'; echo 'roles_path = ../'; } >> ansible.cfg"
 
 script:
-  - container_id=$(mktemp)
+  - "ansible-playbook $SITE_AND_INVENTORY --syntax-check"
+  - "ansible-playbook $SITE_AND_INVENTORY --connection=local -vvvv"
   - >
-    docker run
-    --detach
-    --volume="${PWD}":/etc/ansible/roles/this_role:ro ${run_opts}
-    geerlingguy/docker-${distro}-ansible:latest "${init}" > "${container_id}"
-
-  - >
-    docker exec --tty "$(cat ${container_id})" env TERM=xterm
-    ansible-playbook /etc/ansible/roles/this_role/tests/main.yml
-    --syntax-check
-  - >
-    docker exec --tty "$(cat ${container_id})" env TERM=xterm
-    ansible-playbook /etc/ansible/roles/this_role/tests/main.yml
-
-  - idempotence=$(mktemp)
-  - >
-    docker exec "$(cat ${container_id})"
-    ansible-playbook /etc/ansible/roles/this_role/tests/main.yml
-    | tee -a ${idempotence}
-  - >
-    tail ${idempotence}
+    ansible-playbook $SITE_AND_INVENTORY --connection=local
     | grep -q 'changed=0.*failed=0'
     && (echo 'Idempotence test: pass' && exit 0)
     || (echo 'Idempotence test: fail' && exit 1)
-
   - >
-    docker exec --tty "$(cat ${container_id})" env TERM=xterm
     docker --version
     | grep -q 'version'
     && (echo 'Docker version test: pass' && exit 0)
     || (echo 'Docker version test: fail' && exit 1)
   - >
-    docker exec --tty "$(cat ${container_id})" env TERM=xterm
     docker info
     | grep -q 'Containers'
     && (echo 'Docker permission test: pass' && exit 0)
     || (echo 'Docker permission test: fail' && exit 1)
   - >
-    docker exec --tty "$(cat ${container_id})" env TERM=xterm
     docker-compose --version
     | grep -q 'version'
     && (echo 'Docker Compose test: pass' && exit 0)
