Add apt-cache time to fix idempotency in Ansible 2.2

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -22,3 +22,5 @@ docker_distribution_release: '{{ ansible_local.core.distribution_release
                                  else ansible_distribution_release }}'
 
 docker_repository: 'deb https://apt.dockerproject.org/repo {{ docker_distribution | lower }}-{{ docker_distribution_release }} main'
+
+docker_apt_cache_time: 86400
