--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -13,13 +13,6 @@
     - 'apt-transport-https'
     - 'ca-certificates'
     - 'aufs-tools'
-    - 'python-pip'
-
-- pip:
-    name: docker
-- pip:
-    name: docker-py
-    
 
 - name: Get upstream APT GPG key
   apt_key:
@@ -89,3 +82,20 @@
     group: 'root'
     mode: '0755'
   when: docker_install_docker_compose
+
+- name: check pip
+  command: which pip
+  register: which_pip
+  ignore_errors: true
+  changed_when: false
+
+- name: Get Install pip
+  get_url: url=https://bootstrap.pypa.io/get-pip.py dest=/home/{{ ansible_ssh_user }}/get-pip.py
+  when: which_pip | failed
+
+- name: Install pip
+  shell: python /home/{{ ansible_ssh_user }}/get-pip.py
+  when: which_pip | failed
+
+- name: Install docker-py
+  pip: name=docker-py state=present
