--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -14,7 +14,7 @@ docker_cron_tasks:
     name: "Docker clean up"
     schedule: ["0", "0", "*", "*", "0"]
 
-docker_options: []
+docker_daemon_options: []
 
 docker_apt_key: "9DC858229FC7DD38854AE2D88D81803C0EBFCD88"
 docker_repository: "deb [arch=amd64] https://download.docker.com/linux/{{ ansible_distribution | lower }} {{ ansible_distribution_release }} {{ docker_channel }}"
