and another fix

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 
 apt:
-  keyserver: "hkp://pool.sks-keyservers.net:80"
+  keyserver: "hkp://p80.pool.sks-keyservers.net:80"
 docker_edition: "ce"
 docker_channel: "edge"
 
