--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -20,3 +20,5 @@ docker_apt_key: "9DC858229FC7DD38854AE2D88D81803C0EBFCD88"
 docker_repository: "deb [arch=amd64] https://download.docker.com/linux/{{ ansible_distribution | lower }} {{ ansible_distribution_release }} {{ docker_channel }}"
 
 docker_apt_cache_time: 86400
+
+docker_registries: []
