Added docker_daemon_environment for systemd

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -14,6 +14,7 @@ docker_cron_tasks:
     name: "Docker clean up"
     schedule: ["0", "0", "*", "*", "0"]
 
+docker_daemon_environment: []
 docker_daemon_options: []
 
 docker_apt_key: "9DC858229FC7DD38854AE2D88D81803C0EBFCD88"
