fix: update cache before using apt
fix: use docker_apt_cache_time

fix: do not use docker_apt_cache_time on apt_repository

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -10,6 +10,8 @@
     name: "{{ item }}"
     state: "present"
     install_recommends: False
+    update_cache: True
+    cache_valid_time: "{{ docker_apt_cache_time }}"
   with_items:
     - "apt-transport-https"
     - "ca-certificates"
