--- a/meta/main.yml
+++ b/meta/main.yml
@@ -5,12 +5,13 @@ galaxy_info:
   description: "Install and Docker and optionally Docker Compose."
   company:
   license: "license (MIT)"
-  min_ansible_version: 2.4
+  min_ansible_version: 2.5
 
   platforms:
     - name: "Ubuntu"
       versions:
         - "xenial"
+        - "bionic"
     - name: "Debian"
       versions:
         - "jessie"
