--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,9 +1,9 @@
 ---
 
 galaxy_info:
+  role_name: "docker"
   author: "Nick Janetakis"
   description: "Install Docker and optionally Docker Compose."
-  company:
   license: "license (MIT)"
   min_ansible_version: 2.5
 
@@ -17,7 +17,7 @@ galaxy_info:
         - "jessie"
         - "stretch"
 
-  categories:
+  galaxy_tags:
     - "packaging"
     - "system"
 
