Use consistent YAML styling

--- a/tests/test.yml
+++ b/tests/test.yml
@@ -14,7 +14,7 @@
     - "role_under_test"
 
   pre_tasks:
-    - name: "Add test user"
+    - name: Add test user
       user:
         name: "test"
         shell: "/bin/bash"
