Add better tags to the meta file

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -18,7 +18,8 @@ galaxy_info:
         - "stretch"
 
   galaxy_tags:
+    - "containers"
+    - "docker"
+    - "docker-compose"
     - "packaging"
     - "system"
-
-dependencies: []
