--- a/tests/test.yml
+++ b/tests/test.yml
@@ -47,8 +47,13 @@
       register: result
       changed_when: result.rc != 0
 
-    - name: Ensure /etc/systemd/system/docker.service contains '--dns 8.8.8.8'
+    - name: Ensure /etc/systemd/system/docker.service contains defaults options
       # Double dashes: https://unix.stackexchange.com/a/11382
+      command: grep -- "--log-opt max-size=10m" /etc/systemd/system/docker.service
+      register: result
+      changed_when: result.rc != 0
+
+    - name: Ensure /etc/systemd/system/docker.service contains custom options
       command: grep -- "--dns 8.8.8.8" /etc/systemd/system/docker.service
       register: result
       changed_when: result.rc != 0
@@ -56,4 +61,4 @@
     - name: Ensure Docker clean up cron job was added
       command: crontab -l
       register: result
-      changed_when: not result.stdout is search("docker system prune -f")
+      changed_when: not result.stdout is search("docker system prune -af")
