--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -14,12 +14,16 @@ docker_registries: []
 
 docker_daemon_options_log_max_size: "10m"
 docker_daemon_options_log_max_file: 1000
-docker_daemon_default_options:
-  - "--log-driver json-file"
-  - "--log-opt max-size={{ docker_daemon_options_log_max_size }}"
-  - "--log-opt max-file={{ docker_daemon_options_log_max_file }}"
 
-docker_daemon_options: []
+docker_daemon_default_options: |
+  "log-driver": "json-file",
+  "log-opts": {
+    "max-size": "{{ docker_daemon_options_log_max_size }}",
+    "max-file": "{{ docker_daemon_options_log_max_file }}"
+  }
+
+docker_daemon_options: ""
+
 docker_daemon_environment: []
 
 docker_cron_tasks:
